# mcp-server-qdrant

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  flake.nix  justfile  pyproject.toml  result  smithery.yaml  typos.toml
.cargo/: audit.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: check.yml  ci.yml  release.yaml
crates/mcp-server-qdrant/: Cargo.toml
crates/mcp-server-qdrant/src/: config.rs  embeddings.rs  errors.rs  filters.rs  main.rs  qdrant.rs  server.rs
crates/mcp-server-qdrant/src/embeddings/: candle_backend.rs  onnx_backend.rs
crates/mcp-server-qdrant/tests/: filters_test.rs
docs/plans/: 2026-03-04-mcp-server-qdrant-impl.md  2026-03-04-mcp-server-qdrant-rust-port-design.md
src/: config.rs  embeddings.rs  errors.rs  filters.rs  lib.rs  main.rs  qdrant.rs  server.rs
src/embeddings/: candle_backend.rs  onnx_backend.rs
tests/: config_test.rs  e2e_test.rs  filters_test.rs
