[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

implicit_return = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# MCP
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Qdrant
qdrant-client = "1"

# Embeddings (shared)
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = "0.5"

# Embeddings (candle)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

# Embeddings (onnx)
ort = "2.0.0-rc.11"
ndarray = "0.17"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
