[package]
name = "mcp-server-qdrant"
version.workspace = true
edition.workspace = true
description = "MCP server for Qdrant vector database with local embedding support"
license = "Apache-2.0"
repository = "https://github.com/vaporif/mcp-server-qdrant"
readme = "../../README.md"
keywords = ["mcp", "qdrant", "embeddings", "vector-database"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[features]
default = ["candle"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
onnx = ["dep:ort", "dep:ndarray"]
onnx-fetch = ["onnx"]

[dependencies]
rmcp.workspace = true
qdrant-client.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
async-trait.workspace = true
axum.workspace = true
tokio-util.workspace = true

# Candle (default)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }

# ONNX (optional)
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
